# readDEM

./: CMakeLists.txt  README.md
src/: colormap.h  main.cpp  tif2mat.cpp  tif2mat.h
test/: 00.tif
